fixed layout problems in the main content area

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
+:root {
+    --main-bg-color: #f5d0fe;
+    --secondary-bg-color: #fae8ff;
+}
+
 * {
     font-family: 'Roboto', sans-serif;
 }
@@ -49,7 +54,8 @@ body {
 
 .dash-icon:hover,
 .icon:hover,
-.bell:hover {
+.bell:hover,
+.art-icon:hover,.profile-pic:hover,.trending-pic:hover,.welcome-pic:hover {
     cursor: pointer;
 }
 
@@ -70,7 +76,7 @@ a {
     display: grid;
     grid-template: auto 1fr/2fr 1fr;
     grid-area: 1/2/2/-1;
-    background-color: #d946ef;
+    background-color: var(--main-bg-color);
     padding: 0.5rem 2rem;
 }
 
@@ -84,7 +90,7 @@ a {
     flex: 1;
     border-radius: 20px;
     border: none;
-    background-color: #f5d0fe;
+    background-color: #fae8ff;
 }
 
 
@@ -96,7 +102,8 @@ a {
     justify-content: center;
 }
 
-.welcome-container {
+.welcome-container
+ {
     display: grid;
     grid-template: 1fr 1fr/auto 1fr;
     gap: 0 1rem;
@@ -175,26 +182,31 @@ button {
     font-size: 1.4rem;
     grid-column: 1 /-1;
     margin: 0%;
+    padding: 1rem;
 }
 
 h4 {
     font-size: 1.4rem;
     margin: 0%;
+    padding: 1rem;
+    text-align: center;
 }
 
 .project {
     display: grid;
-    grid-template:1fr auto/1fr;
-    background-color: #d946ef;
+    grid-template: 1fr auto/1fr;
+    background-color: var(--main-bg-color);
     border-color: #4a044e;
     border-radius: 15px;
+    margin-top: 0;
 }
 
 .project-top {
     grid-row: 1/2;
     grid-column: 1/3;
     justify-items: center;
-    padding: 1rem 1rem 0;
+    padding: 1rem;
+    margin-top: 0;
 }
 
 .project-title {
@@ -218,9 +230,56 @@ h4 {
 
 .main-right {
     grid-column: 2/3;
-    background-color: aquamarine;
+    background-color: var(--secondary-bg-color)
 }
 
-.trending {
-    background-color: brown;
+.announcments {
+    border-radius: 15px;
+    background-color: var(--main-bg-color);
+    padding: 1rem;
+    margin: 1rem;
+    margin-top: 0%;
+}
+
+.announcment {
+    border: solid 2px var(--main-bg-color);
+    width: auto;
+    border-bottom-color: #4a044e;
+    padding: 1rem;
+
+}
+
+.announcment-bottom {
+
+    padding: 1rem;
+}
+
+
+.trending-section {
+    background-color: var(--main-bg-color);
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 20px;
+    margin-top: 0;
+
+}
+
+.trending-profile {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 2rem auto;
+    grid-auto-flow: column;
+
+}
+
+.trending-pic {
+    vertical-align: middle;
+    grid-row: 1/3;
+    grid-column: 1/2;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    justify-self: end;
+    align-self: center;
+    padding-right: 1rem;
 }
